data/derived/sp14/progs/unify/prog1516.ml.out
Characters 47-48:
  listReverse (explode w) == w;;
                             ^
Error: This expression has type string but an expression was expected of type
         char list
